security added to swagger link
